--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Mantriq Industrial - Precision CNC Machining | Canada" />
     <meta property="og:description" content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@mantriq_industrial" />
+    <meta name="twitter:image" content="/favicon.ico" />
   </head>
 
   <body>
