--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/svg+xml" href="/mi-favicon.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mantriq Industrial - Precision CNC Machining | Canada</title>
+    <title>Mantriq Industrial</title>
     <meta name="description" content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
     <meta name="author" content="Mantriq Industrial" />
 
     <meta property="og:title" content="Mantriq Industrial - Precision CNC Machining | Canada" />
     <meta property="og:description" content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:image" content="/mi-favicon.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@mantriq_industrial" />
-    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:image" content="/mi-favicon.svg" />
   </head>
 
   <body>
