Minor GA4 tags changing

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Mantriq Industrial - Precision CNC Machining | Canada</title>
-    <!-- GA4 Placeholder -->
+    <!-- GA4 Integration (Uncomment and replace G-XXXXXXXXXX with your active tag) -->
+    <!--
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
-      window.gtag = gtag;
-    </script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PLACEHOLDER123"></script>
-    <script>
       gtag('js', new Date());
-      gtag('config', 'G-PLACEHOLDER123');
+      gtag('config', 'G-XXXXXXXXXX');
     </script>
+    -->
     <meta name="description" content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
     <meta name="author" content="Mantriq Industrial" />
 
