Minor SEO Fixes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/mi-favicon.svg" />
+  <link rel="alternate icon" href="/mi-favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Fonts: Inter (display) and Source Sans Pro (body) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,12 +25,12 @@
     </script>
     -->
   <meta name="description"
-    content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
+    content="Mantriq Industrial: Canadian-Managed Global Manufacturing. Precision CNC & Industrial Supply with Local Accountability." />
   <meta name="author" content="Mantriq Industrial" />
 
   <meta property="og:title" content="Mantriq Industrial - Precision CNC Machining | Canada" />
   <meta property="og:description"
-    content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
+    content="Mantriq Industrial: Canadian-Managed Global Manufacturing. Precision CNC & Industrial Supply with Local Accountability." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/favicon.ico" />
 
@@ -43,7 +46,7 @@
   <form name="rfq" method="POST" data-netlify="true" netlify-honeypot="bot-field" style="display: none;">
     <input type="hidden" name="form-name" value="rfq" />
     <p style="display: none;">
-      <label>Don't fill this out: <input name="bot-field" /></label>
+      <label><input name="bot-field" /></label>
     </p>
     <input type="text" name="name" required />
     <input type="text" name="company" />
