--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="icon" type="image/svg+xml" href="/mi-favicon.svg" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mantriq Industrial</title>
-    <meta name="description" content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
-    <meta name="author" content="Mantriq Industrial" />
 
-    <meta property="og:title" content="Mantriq Industrial - Precision CNC Machining | Canada" />
-    <meta property="og:description" content="Leading Canadian supplier of high-quality precision CNC machined components. Serving automotive, aerospace, oil & gas, medical, construction and marine industries across Canada." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/mi-favicon.svg" />
+<head>
+  <link rel="icon" type="image/svg+xml" href="/mi-favicon.svg" />
+  <link rel="alternate icon" href="/mi-favicon.svg" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mantriq Industrial</title>
+  <meta name="description"
+    content="Mantriq Industrial: Canadian-Managed Global Manufacturing. Precision CNC & Industrial Supply with Local Accountability." />
+  <meta name="author" content="Mantriq Industrial" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@mantriq_industrial" />
-    <meta name="twitter:image" content="/mi-favicon.svg" />
-  </head>
+  <meta property="og:title" content="Mantriq Industrial - Precision CNC Machining | Canada" />
+  <meta property="og:description"
+    content="Mantriq Industrial: Canadian-Managed Global Manufacturing. Precision CNC & Industrial Supply with Local Accountability." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/mi-favicon.svg" />
 
-  <body>
-    <div id="root"></div>
-    
-    <!-- Hidden Netlify form for detection -->
-    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" style="display: none;">
-      <input type="hidden" name="form-name" value="contact" />
-      <p style="display: none;">
-        <label>Don't fill this out: <input name="bot-field" /></label>
-      </p>
-      <input type="text" name="firstName" required />
-      <input type="text" name="lastName" required />
-      <input type="text" name="company" />
-      <input type="email" name="email" required />
-      <input type="tel" name="phone" />
-      <input type="text" name="industry" />
-      <textarea name="projectDetails" required></textarea>
-    </form>
-    
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@mantriq_industrial" />
+  <meta name="twitter:image" content="/mi-favicon.svg" />
+</head>
+
+<body>
+  <div id="root"></div>
+
+  <!-- Hidden Netlify form for detection -->
+  <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" style="display: none;">
+    <input type="hidden" name="form-name" value="contact" />
+    <p style="display: none;">
+      <label><input name="bot-field" /></label>
+    </p>
+    <input type="text" name="firstName" required />
+    <input type="text" name="lastName" required />
+    <input type="text" name="company" />
+    <input type="email" name="email" required />
+    <input type="tel" name="phone" />
+    <input type="text" name="industry" />
+    <textarea name="projectDetails" required></textarea>
+  </form>
+
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
